--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -575,6 +575,7 @@ footer {
 
 .ion-social-instagram:hover { color: #517fa4; }
 
+footer .security-seal, 
 footer p {
     color: #888;
     text-align: center;
